force-app/main/default/objects/Lease_Agreement__c/Lease_Agreement__c.object-meta.xml
<CustomObject>
    <label>Lease Agreement</label>
    <nameField>
        <displayFormat>LA-{00000000}</displayFormat>
        <label>Lease Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>