force-app/main/default/objects/Lease_Agreement__c/fields/Agreed_Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Monthly_Rent__c</fullName>
    <label>Agreed Monthly Rent</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>