force-app/main/default/objects/Lease_Agreement__c/fields/Reminder_30_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_30_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>30-Day Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>