force-app/main/default/objects/Lease_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Tenant__c</columns>
    <columns>Terms__c</columns>
    <columns>Agreed_Monthly_Rent__c</columns>
    <columns>Reminder_1_Sent__c</columns>
    <columns>Reminder_30_Sent__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>